--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
-            <div>
+            <div class="home">
                 <h3>HOME</h3>
+                <div class="home-score">
+                    <p class="score">0</p>
+                </div>
+                 <div class="scoreboard">
+                    <button class="one-btn btn">+1</button>
+                    <button class="two-btn btn">+2</button>
+                    <button class="three-btn btn">+3</button>
+                    <button class="reset-btn btn">RESET</button>
+                </div>
             </div>
-            <div>
+            <div class="guest">
                 <h3>GUEST</h3>
+                <div class="guest-score">
+                    <p class="score">0</p>
+                </div> 
+                <div class="scoreboard">
+                    <button class="one-btn btn">+1</button>
+                    <button class="two-btn btn">+2</button>
+                    <button class="three-btn btn">+3</button>
+                    <button class="reset-btn btn">RESET</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
