--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <div class="home">
                 <h3>HOME</h3>
                 <div class="home-score">
-                    <p class="score">0</p>
+                    <p id="score">0</p>
                 </div>
                  <div class="scoreboard">
                     <button class="one-btn btn">+1</button>
@@ -19,7 +19,7 @@
             <div class="guest">
                 <h3>GUEST</h3>
                 <div class="guest-score">
-                    <p class="score">0</p>
+                    <p id="score">0</p>
                 </div> 
                 <div class="scoreboard">
                     <button class="one-btn btn">+1</button>
