--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
             <div class="home">
                 <h3>HOME</h3>
                 <div class="home-score">
-                    <p id="score">0</p>
+                    <p id="homescore">0</p>
                 </div>
                  <div class="scoreboard">
-                    <button class="one-btn btn">+1</button>
-                    <button class="two-btn btn">+2</button>
-                    <button class="three-btn btn">+3</button>
-                    <button class="reset-btn btn">RESET</button>
+                    <button class="one-btn btn" onclick="increment1()" >+1</button>
+                    <button class="two-btn btn" onclick="increment2()">+2</button>
+                    <button class="three-btn btn" onclick="increment3()">+3</button>
+                    <button class="reset-btn btn" onclick="reset()">RESET</button>
                 </div>
             </div>
             <div class="guest">
                 <h3>GUEST</h3>
                 <div class="guest-score">
-                    <p id="score">0</p>
+                    <p id="guestscore">0</p>
                 </div> 
                 <div class="scoreboard">
-                    <button class="one-btn btn">+1</button>
-                    <button class="two-btn btn">+2</button>
-                    <button class="three-btn btn">+3</button>
-                    <button class="reset-btn btn">RESET</button>
+                    <button class="one-btn btn" onclick="increment11()">+1</button>
+                    <button class="two-btn btn" onclick="increment22()">+2</button>
+                    <button class="three-btn btn" onclick="increment33()">+3</button>
+                    <button class="reset-btn btn" onclick="reset()">RESET</button>
                 </div>
             </div>
         </div>
